# beebfam

./: .gitignore  README.md  backup-dbs.sh  build-and-deploy-all.sh  package-lock.json  package.json
.github/workflows/: cd.yml
andrew-inbox/: Cargo.toml  build-and-deploy.sh  db-migrate.sh
andrew-inbox/migrations/: 20251026175856_init.sql  20251101011532_add_created_at.sql  20251101012629_add_created_at_better.sql
andrew-inbox/src/: main.rs
auth-macro/: Cargo.toml
auth-macro/src/: lib.rs
chore-kanban/: Cargo.toml  build-and-deploy.sh  db-migrate.sh
chore-kanban/migrations/: 20251026154901_make_bathroom_biweekly.sql  20251026160821_fix_bathroom_mistake.sql  20251118222648_add_wash_fabric.sql  20260124165428_cut-us-some-slack.sql
chore-kanban/src/: main.rs
exercise-tracker/: build-and-deploy.sh  db-migrate.sh  plan.md
exercise-tracker/migrations/: 20251115165449_init.sql  20251228225859_template_init.sql  20251231161232_extra_exercises.sql  20251231201740_add_category.sql  20260108183253_more_exercises.sql  20260124165032_remove-hand-grippers.sql
exercise-tracker/src/: main.rs
govee-cli/: Cargo.toml  README.md
govee-cli/src/: main.rs
grocery-list/: Cargo.toml  build-and-deploy.sh  db-migrate.sh
habit-tracker/: Cargo.toml  build-and-deploy.sh  db-migrate.sh
mario-picker/: README.md  build-and-deploy.sh  index.html
media-list/: Cargo.toml  README.md  build-and-deploy.sh  db-migrate.sh
root/: Cargo.toml  README.md  build-and-deploy.sh  index.css  index.html
root/public/: index.html
root/public/assets/: index.css
root/src/: main.rs
(+45 files in other folders)
