[package]
name = "root"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
axum-extra = { version = "0.10.3", features = ["cookie"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
mime_guess = "2.0.5"
rust-embed = "8.7.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
