[package]
name = "root"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
auth-macro = { path = "../auth-macro/"}
axum = "0.8.4"
axum-extra = { version = "0.10.3", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures-util = "0.3.31"
log = "0.4.28"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
